k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: default
spec:
  selector:
    app: test-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
